force-app/main/default/objects/Hierarchy_Configuration__mdt/Hierarchy_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for hierarchy canvas component to define object types, fields, and display settings</description>
    <label>Hierarchy Configuration</label>
    <pluralLabel>Hierarchy Configurations</pluralLabel>
</CustomObject>