force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Field1_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field1_API_Name__c</fullName>
    <description>API name of first additional field to display (e.g., Phone, Email__c)</description>
    <label>Field 1 API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>