force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Field1_Label__c.field-meta.xml
<CustomField>
    <fullName>Field1_Label__c</fullName>
    <description>Display label for first additional field (e.g., Phone, Email)</description>
    <label>Field 1 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>