force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Field2_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field2_API_Name__c</fullName>
    <description>API name of second additional field to display (e.g., Industry, BillingCity)</description>
    <label>Field 2 API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>