force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Field2_Label__c.field-meta.xml
<CustomField>
    <fullName>Field2_Label__c</fullName>
    <description>Display label for second additional field (e.g., Industry, Address)</description>
    <label>Field 2 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>