force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <description>SLDS icon name for nodes (e.g., standard:account, custom:custom1)</description>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>