force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Include_Related_Objects__c.field-meta.xml
<CustomField>
    <fullName>Include_Related_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to include related objects as child nodes in the hierarchy</description>
    <label>Include Related Objects</label>
    <type>Checkbox</type>
</CustomField>