force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Max_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Records__c</fullName>
    <description>Maximum number of records to retrieve (default: 1000)</description>
    <label>Max Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>