force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the Salesforce object to display in hierarchy (e.g., Account, Contact, Custom_Object__c)</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>