force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Parent_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_API_Name__c</fullName>
    <description>API name of the field that defines parent relationship (e.g., ParentId, Account__c)</description>
    <label>Parent Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>