force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Related_Objects__c.field-meta.xml
<CustomField>
    <fullName>Related_Objects__c</fullName>
    <description>JSON configuration for related objects. Format: [{&quot;objectApiName&quot;:&quot;Opportunity&quot;,&quot;relationshipField&quot;:&quot;AccountId&quot;,&quot;nameField&quot;:&quot;Name&quot;,&quot;subtitleField&quot;:&quot;StageName&quot;,&quot;iconName&quot;:&quot;standard:opportunity&quot;}]</description>
    <label>Related Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>