force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Subtitle_Field__c.field-meta.xml
<CustomField>
    <fullName>Subtitle_Field__c</fullName>
    <description>Field to use for node subtitle display (e.g., Type, Industry, Status__c)</description>
    <label>Subtitle Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>