force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Title_Field__c.field-meta.xml
<CustomField>
    <fullName>Title_Field__c</fullName>
    <description>Field to use for node title/name display (e.g., Name, Title__c)</description>
    <label>Title Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>